--- a/style.css
+++ b/style.css
@@ -5,3 +5,95 @@ Author: csykik
 Description: portfolio site (magazine style)
 Version: 1.0
 */
+
+html{
+    margin: 0 !important;
+}
+
+body{
+    margin: 0;
+}
+
+.overlay{
+    display: none;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+
+.overlay .overlay_curtain{
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.overlay .overlay_curtain .curtain_part{
+    position: relative;
+    width: 25%;
+    height: 100vh;
+
+}
+
+.overlay .overlay_curtain .curtain_part .cloth{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(to right, #3b664e, #16241c, #3b664e);
+}
+
+
+.overlay .overlay_curtain .curtain_part.short{
+    width: 10%;
+}
+
+
+
+.wrapper{
+    width: 100%;
+    height: 100vh;
+    background-color: #e5e1ab;
+    position: relative;
+}
+
+.wrapper .furniture{
+    width: 200px;
+    height: 200px;
+    position: absolute;
+}
+
+.wrapper #photo{
+    background: url(img/액자1.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+
+
+
+
+.scene{
+    height: 100vh;
+}
+
+#scene_main{
+    background-color: pink;
+}
+
+
+#scene_intro{
+    background-color: coral;
+}
+
+#scene_intro .box{
+    height: 100px;
+    width: 100px;
+    background-color: skyblue;
+}
+
+#scene_intro .box2{
+    height: 100px;
+    width: 100px;
+    background-color: white;
+}
